# dusklight

./: CMakeLists.txt  CMakePresets.json  README.md  files.cmake  flake.nix
.github/workflows/: build.yml
cmake/: DuskModSDK.cmake  dusk_imgui_ctx.cpp
docs/: modding.md
include/d/: d_camera.h  d_com_inf_game.h  d_save.h  d_stage.h
include/d/actor/: d_a_alink.h
include/dusk/: frame_interpolation.h  gyro.h  mouse.h  settings.h
res/rml/: window.rcss
src/d/: d_camera.cpp  d_com_inf_game.cpp  d_event.cpp  d_event_manager.cpp  d_file_select.cpp  d_menu_fmap2D.cpp  d_menu_map_common.cpp  d_menu_ring.cpp  d_menu_window.cpp  d_msg_class.cpp  d_msg_object.cpp  d_name.cpp  d_particle.cpp  d_s_play.cpp  d_save.cpp  d_stage.cpp
src/d/actor/: d_a_alink.cpp  d_a_alink_demo.inc  d_a_alink_dusk.cpp  d_a_alink_kandelaar.inc  d_a_alink_link.inc  d_a_bg.cpp  d_a_door_shutter.cpp  d_a_horse.cpp  d_a_kytag10.cpp  d_a_mg_rod.cpp  d_a_npc_yelia.cpp  d_a_npc_ykw.cpp  d_a_obj_drop.cpp  d_a_obj_sWallShutter.cpp  d_a_swc00.cpp
src/dusk/: achievements.cpp  data.cpp  frame_interpolation.cpp  gyro.cpp  mouse.cpp  settings.cpp
src/dusk/archipelago/: archipelago_context.cpp  archipelago_context.hpp
src/dusk/imgui/: ImGuiArchipelagoDebug.cpp  ImGuiConsole.cpp  ImGuiConsole.hpp  ImGuiMenuEnhancements.cpp  ImGuiMenuRandomizer.cpp  ImGuiMenuRandomizer.hpp
src/dusk/randomizer/: randomizer.cmake  (+1 more)
src/f_ap/: f_ap_game.cpp
src/f_op/: f_op_actor_mng.cpp
src/m_Do/: m_Do_main.cpp
tools/mod_test/: CMakeLists.txt  mod.json
tools/mod_test/res/: hello.txt
tools/mod_test/src/: mod.cpp
(+55 files in other folders)
